--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,13 +19,13 @@ typst-html = []
 
 [dependencies]
 binstall-tar = { version = "0.4", optional = true }
-chrono = "0.4"
+chrono = "0.4.41"
 comemo = "0.4"
 dirs = "6.0"
 ecow = "0.2"
 flate2 = { version = "1.0", optional = true }
 thiserror = "2.0"
-typst = "0.13"
+typst = { git = "https://github.com/matous-volf/typst", branch = "feat/chrono-into-value" }
 ureq = { version = "3.0", optional = true }
 typst-kit = { version = "0.13", default-features = false, optional = true }
 reqwest = { version = "0.12", features = ["blocking"], optional = true }
@@ -33,9 +33,9 @@ bytes = { version = "1.10",  optional = true }
 
 [dev-dependencies]
 derive_typst_intoval = "0.3.0"
-typst-pdf = "0.13.1"
-typst-html = "0.13.1"
-typst = "0.13.1"
+typst-pdf = { git = "https://github.com/matous-volf/typst", branch = "feat/chrono-into-value" }
+typst-html = { git = "https://github.com/matous-volf/typst", branch = "feat/chrono-into-value" }
+typst = { git = "https://github.com/matous-volf/typst", branch = "feat/chrono-into-value" }
 
 [[example]]
 name = "resolve_packages"
